tests/instantiating/memory_missing_read_latency/stderr.golden
error: 'memory' must have 'read-latency' property set when its access equals "Read Write"
bus.fbd +2:3
   |
 2 |   M memory
   |   ^
